HDFS-2235. Encode servlet paths. HADOOP-7531. Add servlet util methods for handling paths in requests.
Reason: Bug
Author: Eli Collins
Ref: CDH-3304